--- a/roll-dice/src/App.css
+++ b/roll-dice/src/App.css
@@ -1,17 +1,28 @@
 .App {
-  background-color: #282c34;
+  background-color: #5285eb;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-evenly;
   color: white;
 }
 
 .diceContainer {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-  background-color: rgb(98, 98, 136);
+  justify-content: space-evenly;
+  margin-top: 20%;
+}
+
+button {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  border-radius: 10px;
+  box-shadow: 15%;
+  background-color: orange;
+  color: antiquewhite;
+  font-size: large;
+  font-weight: bold;
 }
